--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,9 @@
 <body>
    <div class="main-content">
       {{>header}}
+      <p>This site was created by Andrew Boyle as part of Andrew Mead's Node.js Developer course on udemy.</p>
+      <p>It uses data from mapbox.com and weatherstack.com.</p>
+
       <img class="portrait" src="/img/me.jpg">
    </div>
    
