Switch to openweathermap.org

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,7 +12,9 @@
    <div class="main-content">
       {{>header}}
       <p>This site was created by Andrew Boyle as part of Andrew Mead's Node.js Developer course on udemy.</p>
-      <p>It uses data from mapbox.com and weatherstack.com.</p>
+      <p>It uses data from mapbox.com and openweathermap.org.</p>
+      <br>
+
 
       <img class="portrait" src="/img/me.jpg">
    </div>
